--- a/store-app/src/style/main.scss
+++ b/store-app/src/style/main.scss
@@ -10,6 +10,7 @@
 @import "../pages/Dashboard/Dashboard.scss";
 @import "../pages/ProductDetails/ProductDetails.scss";
 @import "../components/CardDetails/CardDetail.scss";
+@import "../components/Search/Search.scss";
 
 // ? All style
 *{
