--- a/store-app/src/components/Form/Form.scss
+++ b/store-app/src/components/Form/Form.scss
@@ -1,6 +1,7 @@
 .form{
     width: 80%;
-    height: 50vh;
+    min-height: 50vh;
+    height: auto;
     padding: 30px;
     margin: 20px 0;
     border-radius: 15px;
@@ -13,5 +14,21 @@
         margin: 10px;
         padding: 10px;
         border-radius: 10px;
+    }
+    .file-input{
+        margin-left: 70px;
+    }
+    .image{
+        width: 100px;
+        height: 100px;
+        border-radius: 10px;
+        border: 1px solid black;
+        margin: 10px;
+        img{
+            border-radius: 10px;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
 }
