--- a/store-app/src/components/Button/Button.scss
+++ b/store-app/src/components/Button/Button.scss
@@ -11,3 +11,7 @@ button{
     background-color: rgb(64, 161, 64);
     color: #fff;
 }
+.danger{
+    background-color: rgb(230, 39, 39);
+    color: #fff;
+}
