--- a/store-app/src/style/main.scss
+++ b/store-app/src/style/main.scss
@@ -11,6 +11,7 @@
 @import "../pages/ProductDetails/ProductDetails.scss";
 @import "../components/CardDetails/CardDetail.scss";
 @import "../components/Search/Search.scss";
+@import "../pages/Basket/Basket.scss";
 
 // ? All style
 *{
